Initial Node.JS Docker remote execution. Registry key: NodeJS.Docker Generate 2 images with cached sources and node_modules update if user specifies that, otherwise run provided image  debug is not working, docker compose is not working

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -732,3 +732,6 @@ ide.screenreader.autodetect.accessibility.description=Automatically detect wheth
 
 editor.rainbow.identifiers=false
 editor.rainbow.identifiers.description=Rainbow identifiers in editor
+
+NodeJS.Docker=false
+NodeJS.Docker.description=Enables Node.JS remote execution with Docker (if Docker and Node.JS plugins are installed)
