IDEA-131748 Stop debug session kills all processes - disabled winp by default

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -499,7 +499,7 @@ editor.injected.highlighting.enabled.description=Disables injected fragments hig
 run.processes.with.pty=false
 kill.windows.processes.softly=false
 output.reader.blocking.mode=false
-disable.winp=false
+disable.winp=true
 
 ide.certificate.manager=true
 
