--- a/python/setup-test-environment/build.gradle
+++ b/python/setup-test-environment/build.gradle
@@ -12,7 +12,7 @@ envs {
   packages = ["pip", "setuptools"]
   _64Bits = true
 
-  conda "django19", "2.7", ["django==1.9", "tox", "nose", "pytest", "behave", "lettuce"]
+  conda "django19", "2.7", ["django==1.9", "tox", "nose", "pytest", "behave", "lettuce>=0.2.22"]
   textfile "django19/tags.txt", "django\nnose\npytest\nbehave\nlettuce\npackaging\ntox"
 
   conda "django18", "2.7", ["django==1.6"]
