IDEA-CR-10668 separate messages in some useful way; less yellow code

--- a/platform/platform-resources-en/src/messages/VcsBundle.properties
+++ b/platform/platform-resources-en/src/messages/VcsBundle.properties
@@ -434,7 +434,7 @@ shelve.changes.rename.title=Rename Shelved Changelist
 changes.remove.active.prompt=Select the changelist to which the changes should be moved:
 changes.remove.active.empty.prompt=Select the changelist to make active:
 changes.remove.active.title=Delete Active Changelist
-create.patch.loading.content.progress=Loading content revisions
+create.patch.loading.content.progress=Loading Content Revisions
 create.patch.reverse.checkbox=&Reverse patch
 create.patch.base.revision=&Include entire base revision content into patch file
 create.patch.base.revision.tooltip = For all modified non-binary files smaller than 500kB store their entire base revision texts inside the patch file.
