--- a/python/educational-python/build.gradle
+++ b/python/educational-python/build.gradle
@@ -21,10 +21,12 @@ subprojects {
   }
 
   processResources {
-    filter ReplaceTokens, tokens: [
-      'VERSION': version.toString(),
-      'BUILD-NUMBER': buildNumber,
-    ]
+    filesNotMatching("**/*.png") {
+      it.filter(ReplaceTokens, tokens: [
+        'VERSION'     : version.toString(),
+        'BUILD-NUMBER': buildNumber,
+      ])
+    }
   }
 
   repositories {
