--- a/python/educational-python/build.gradle
+++ b/python/educational-python/build.gradle
@@ -53,7 +53,7 @@ subprojects {
 
   intellij {
     version ideaVersion
-    updateSinceUntilBuild true
+    updateSinceUntilBuild Boolean.valueOf(updateBuildNumber)
     downloadSources Boolean.valueOf(downloadIdeaSources)
     sandboxDirectory = new File(rootProject.projectDir, "gradleBuild/idea-sandbox")
   }
