--- a/platform/platform-resources-en/src/messages/CodeInsightBundle.properties
+++ b/platform/platform-resources-en/src/messages/CodeInsightBundle.properties
@@ -283,13 +283,13 @@ javadoc.method.specified.by=Specified by:
 javadoc.external.fetch.error.message=Cannot fetch remote documentation: internal error
 searching.for.implementations=Searching For Implementations...
 
-goto.implementation.chooserTitle=<html><body>Choose Implementation of <b>{0}</b> ({1} found)</body></html>
+goto.implementation.chooserTitle=<html><body>Choose Implementation of <b>{0}</b> ({1} found{2})</body></html>
 goto.implementation.findUsages.title=Implementations of {0}
 goto.implementation.notFound=No implementations found
 
-goto.test.chooserTitle.test=<html><body>Choose Test for <b>{0}</b> ({1} found)</body></html>
+goto.test.chooserTitle.test=<html><body>Choose Test for <b>{0}</b> ({1} found{2})</body></html>
 goto.test.findUsages.test.title=Tests for {0}
-goto.test.chooserTitle.subject=<html><body>Choose Test Subject for <b>{0}</b> ({1} found)</body></html>
+goto.test.chooserTitle.subject=<html><body>Choose Test Subject for <b>{0}</b> ({1} found{2})</body></html>
 goto.test.findUsages.subject.title=Test Subjects for {0}
 goto.test.notFound=No test subjects found
 
