extend UnnecessaryQualifierForThisInspection for super calls (IDEA-153781)

--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -520,7 +520,7 @@ serializable.class.without.serialversionuid.problem.descriptor=<code>#ref</code>
 
 #dynamic
 non.protected.constructor.in.abstract.class.display.name='public' constructor in 'abstract' class
-unnecessary.qualifier.for.this.display.name=Unnecessary qualifier for 'this'
+unnecessary.qualifier.for.this.display.name=Unnecessary qualifier for 'this' or 'super'
 multiple.declaration.display.name=Multiple variables in one declaration
 thread.priority.display.name=Call to 'Thread.setPriority()'
 too.broad.scope.display.name=Scope of variable is too broad
@@ -980,6 +980,7 @@ unnecessary.semicolon.problem.descriptor=Unnecessary semicolon <code>#ref</code>
 unnecessary.fully.qualified.name.problem.descriptor1=Qualifier <code>#ref</code> is unnecessary, and can be replaced with an import #loc
 unnecessary.fully.qualified.name.problem.descriptor2=Qualifier <code>#ref</code> is unnecessary and can be removed #loc
 unnecessary.qualifier.for.this.problem.descriptor=Qualifier <code>#ref</code> on 'this' is unnecessary in this context #loc
+unnecessary.qualifier.for.super.problem.descriptor=Qualifier <code>#ref</code> on 'super' is unnecessary in this context #loc
 unused.label.problem.descriptor=Unused label <code>#ref</code> #loc
 redundant.field.initialization.problem.descriptor=Field initialization to <code>#ref</code> is redundant #loc
 redundant.implements.problem.descriptor=Redundant interface declaration <code>#ref</code> #loc
