Registry property for windows 10 look

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -738,3 +738,6 @@ ide.screenreader.autodetect.accessibility.description=Automatically detect wheth
 
 editor.rainbow.identifiers=false
 editor.rainbow.identifiers.description=Rainbow identifiers in editor
+
+ide.intellij.laf.win10.ui=false
+ide.intellij.laf.win10.ui.description=Enables Windows 10 look
