WEB-20321 HTML code style — attribute value quotation

--- a/platform/platform-resources-en/src/messages/ApplicationBundle.properties
+++ b/platform/platform-resources-en/src/messages/ApplicationBundle.properties
@@ -90,6 +90,7 @@ checkbox.parentheses.around.method.arguments=Add parentheses around method argum
 checkbox.rename.local.variables.inplace=Enable in-place mode
 checkbox.rename.local.variables.preselect=Preselect old name
 generated.quote.marks=Generated quote marks:
+generated.quote.enforce.format=Enforce on format
 editbox.keep.blank.lines=Keep blank lines:
 checkbox.keep.white.spaces=Keep white spaces
 checkbox.align.text=Align text
