--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/src/com/siyeh/InspectionGadgetsBundle.properties
@@ -2175,5 +2175,4 @@ optional.get.without.is.present.problem.descriptor=<code>{0}.#ref()</code> witho
 synchronization.on.get.class.display.name=Synchronization on 'getClass()'
 synchronization.on.get.class.problem.descriptor=Synchronization on <code>#ref()</code> #loc
 object.instantiation.inside.equals.or.hashcode.display.name=Object instantiation inside 'equals()' or 'hashCode()'
-object.instantiation.inside.equals.problem.descriptor=Object instantiation inside 'equals()' #loc
-object.instantiation.inside.hashcode.problem.descriptor=Object instantiation inside 'hashCode()' #loc
+object.instantiation.inside.equals.or.hashcode.problem.descriptor=Object instantiation inside ''{0}()'' #loc
