access consistency improvements

--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -586,3 +586,5 @@ tfs.set.connection.timeout=false
 
 editor.breadcrumbs.highlight.on.hover=false
 editor.breadcrumbs.highlight.on.hover.description=Highlight corresponding ranges in editor on breadcrumb item hover (requires project reopening)
+ide.rest.api.requests.per.minute=30
+ide.built.in.web.server.activatable=true
