IDEA-156235 apply changes from AndroidStudio (2)
Author: Renaud Paquay <rpaquay@google.com>

--- a/platform/platform-resources-en/src/messages/IdeBundle.properties
+++ b/platform/platform-resources-en/src/messages/IdeBundle.properties
@@ -37,6 +37,7 @@ checkbox.save.files.automatically=Save files automatically if application is idl
 checkbox.save.files.on.frame.deactivation=Save files on frame deactivation
 checkbox.synchronize.files.on.frame.activation=Synchronize files on frame or editor tab activation
 checkbox.reopen.last.project.on.startup=Reopen last project on startup
+checkbox.support.screen.readers=Support screen readers (requires restart)
 treenode.loading= loading...
 action.clear.list=_Clear List
 action.clear.list.message=Would you like to clear the list of recent projects?
