fix button title cases (IDEA-155669)

--- a/platform/platform-resources-en/src/messages/RefactoringBundle.properties
+++ b/platform/platform-resources-en/src/messages/RefactoringBundle.properties
@@ -633,7 +633,7 @@ delete.anyway.button=&Delete Anyway
 ignore.button=Ignore
 the.following.problems.were.found=The following problems were found:
 cancel.button=Ca&ncel
-view.usages=&View usages
+view.usages=&View Usages
 anonymous.class.text=Anonymous class
 problems.detected.title=Problems Detected
 continue.button=&Continue
