human readable intention family names for IDEA-156288

--- a/platform/platform-resources-en/src/messages/XmlBundle.properties
+++ b/platform/platform-resources-en/src/messages/XmlBundle.properties
@@ -50,7 +50,9 @@ unescaped.xml.character.fix.message.parameter=ampersand
 #HtmlDeprecatedTagInspection & HtmlPresentationalElementInspection
 html.deprecated.tag=Deprecated HTML tag
 html.replace.tag.with.css.quickfix.text=Replace {0} tag with CSS
+html.replace.tag.with.css.quickfix.family.name=Replace with CSS
 html.replace.tag.with.another.quickfix.text=Replace {0} tag with {1} tag
+html.replace.tag.with.another.quickfix.family.name=Replace with another tag
 html.inspections.check.presentational.tag=Presentational HTML tag
 
 #HtmlFormInputWithoutLabelInspection
