WEB-20704 Emmet: allow to configure bem separators

--- a/platform/platform-resources-en/src/messages/XmlBundle.properties
+++ b/platform/platform-resources-en/src/messages/XmlBundle.properties
@@ -230,10 +230,14 @@ emmet.update.tag.title=Update tag with Emmet
 emmet.configuration.title=Emmet
 emmet.enable.label=&Enable XML/HTML Emmet
 emmet.filters.enabled.by.default=Filters enabled by default
+emmet.bem.title=BEM
 emmet.enable.preview=Enable &abbreviation preview
 emmet.expand.abbreviation.with=Expand &abbreviation with
 emmet.href.autodetect=Enable automatic &URL recognition while wrapping text with <a> tag
 emmet.add.edit.point.at.the.end.of.template=Add edit &point at the end of template
+emmet.bem.class.name.element.separator.label=Class name's element separator:
+emmet.bem.class.name.modifier.separator.label=Class name's modifier separator:
+emmet.bem.short.element.prefix.label=Short element prefix:
 
 title.cannot.create.html.file=Cannot create HTML file
 new.html.file.action=HTML File
