inspection tool window:  disable "remove from EP" for predefined EPs

--- a/platform/platform-resources-en/src/messages/InspectionsBundle.properties
+++ b/platform/platform-resources-en/src/messages/InspectionsBundle.properties
@@ -393,6 +393,7 @@ inspection.dead.code.safe.delete.quickfix=Safe delete
 inspection.dead.code.comment.quickfix=Comment out
 inspection.dead.code.entry.point.quickfix=Add as Entry Point
 inspection.dead.code.remove.from.entry.point.quickfix=Remove from Entry Points
+inspection.dead.code.remove.user.defined.entry.point.quickfix=Remove User Defined Entry Points
 inspection.dead.code.entry.points.display.name=Entry Points
 inspection.dead.code.export.results.no.instantiations.found=No instantiations found.
 inspection.dead.code.export.results.instantiated.from.heading=Instantiated from
