--- a/platform/util/resources/misc/registry.properties
+++ b/platform/util/resources/misc/registry.properties
@@ -638,7 +638,7 @@ keymap.show.alias.actions=false
 keymap.windows.as.meta=false
 keymap.windows.as.meta.description='Windows' key press/release events would be processed as 'Meta' modifier for shortcuts
 
-keymap.current.os.only=false
+keymap.current.os.only=true
 keymap.current.os.only.description=Filter out built-in keymaps designed for other OSes
 keymap.current.os.only.restartRequired=true
 
