--- a/platform/platform-api/resources/messages/IdeBundle.properties
+++ b/platform/platform-api/resources/messages/IdeBundle.properties
@@ -453,6 +453,7 @@ macro.project.source.path=Project source path
 macro.content.root=Content root path the file belongs to
 macro.prompt=Displays a string input dialog
 macro.clipboard.content=The clipboard content
+macro.temp.dir=The directory for temporary files
 prompt.enter.parameters=Enter parameters:
 title.input=Input
 macro.sourcepath.entry=Entry in the sourcepath the element belongs to
