IDEA-252594: Introduce OSName macro

--- a/platform/platform-api/resources/messages/IdeBundle.properties
+++ b/platform/platform-api/resources/messages/IdeBundle.properties
@@ -454,6 +454,7 @@ macro.content.root=Content root path the file belongs to
 macro.prompt=Displays a string input dialog
 macro.clipboard.content=The clipboard content
 macro.temp.dir=The directory for temporary files
+macro.os.name=The name of the operating system in lower case
 prompt.enter.parameters=Enter parameters:
 title.input=Input
 macro.sourcepath.entry=Entry in the sourcepath the element belongs to
