[kotlin] Add inspection to useless Kotlin JVM annotations in Java

--- a/plugins/kotlin/frontend-independent/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/frontend-independent/resources-en/messages/KotlinBundle.properties
@@ -2548,3 +2548,6 @@ inspection.unnecessary.opt_in.redundant.marker=The opt-in marker is redundant: n
 inspection.unnecessary.opt_in.redundant.annotation=The opt-in annotation is redundant: no matching experimental API is used
 inspection.unnecessary.opt_in.remove.marker.fix.family.name=Remove opt-in marker
 inspection.unnecessary.opt_in.remove.annotation.fix.family.name=Remove annotation
+
+inspection.kotlin.jvm.annotation.in.java.display.name=Useless Kotlin JVM annotations in Java
+inspection.useless.kotlin.jvm.annotation.in.java=Kotlin JVM annotation ''{0}'' is useless in Java
