[kotlin] Add ReplaceWithIsNullOrEmptyInspection
^KTIJ-20207 Fixed
^KTIJ-13836 Fixed

--- a/plugins/kotlin/frontend-independent/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/frontend-independent/resources-en/messages/KotlinBundle.properties
@@ -2548,3 +2548,5 @@ inspection.unnecessary.opt_in.redundant.marker=The opt-in marker is redundant: n
 inspection.unnecessary.opt_in.redundant.annotation=The opt-in annotation is redundant: no matching experimental API is used
 inspection.unnecessary.opt_in.remove.marker.fix.family.name=Remove opt-in marker
 inspection.unnecessary.opt_in.remove.annotation.fix.family.name=Remove annotation
+
+inspection.replace.with.is.null.or.empty.display.name=Null and empty checks can be simplified
