[IDEA-289267] Display unnecessary codes as unused

--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/resources/messages/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/resources/messages/InspectionGadgetsBundle.properties
@@ -944,8 +944,8 @@ nested.try.statement.problem.descriptor=Nested <code>#ref</code> statement #loc
 exception.from.catch.which.doesnt.wrap.problem.descriptor=<code>#ref</code> inside 'catch' block ignores the caught exception #loc
 instanceof.catch.parameter.problem.descriptor='instanceof' on 'catch' parameter <code>#ref</code> #loc
 non.final.field.of.exception.problem.descriptor=Non-final field <code>#ref</code> of exception class #loc
-unnecessary.label.on.break.statement.problem.descriptor=Unnecessary label on <code>#ref</code> statement #loc
-unnecessary.label.on.continue.statement.problem.descriptor=Unnecessary label on <code>#ref</code> statement #loc
+unnecessary.label.on.break.statement.problem.descriptor=Unnecessary label <code>#ref</code> on break statement #loc
+unnecessary.label.on.continue.statement.problem.descriptor=Unnecessary label <code>#ref</code> on continue statement #loc
 trivial.if.problem.descriptor=<code>#ref</code> statement can be simplified #loc
 unnecessary.parentheses.problem.descriptor=Parentheses around <code>#ref</code> are unnecessary #loc
 unnecessary.local.variable.problem.descriptor=Local variable <code>#ref</code> is redundant #loc
@@ -965,7 +965,7 @@ extends.object.problem.descriptor=Class <code>#ref</code> explicitly extends 'ja
 type.parameter.extends.object.problem.descriptor1=Type parameter <code>#ref</code> explicitly extends 'java.lang.Object' #loc
 type.parameter.extends.object.problem.descriptor2=Wildcard type argument <code>#ref</code> explicitly extends 'java.lang.Object' #loc
 unnecessary.super.constructor.problem.descriptor=<code>#ref</code> is unnecessary #loc
-unnecessary.constructor.problem.descriptor=No-arg constructor <code>#ref()</code> is redundant #loc
+unnecessary.constructor.problem.descriptor=No-arg constructor <code>#ref</code> is redundant #loc
 unnecessary.constructor.annotation.option=Ignore constructors with an annotation
 for.loop.replaceable.by.while.problem.descriptor=<code>#ref</code> loop statement may be replace by 'while' loop #loc
 unnecessary.default.problem.descriptor=<code>#ref</code> branch is unnecessary #loc
