--- a/plugins/kotlin/resources-fir/resources/META-INF/plugin.xml
+++ b/plugins/kotlin/resources-fir/resources/META-INF/plugin.xml
@@ -38,7 +38,7 @@ The Kotlin FIR plugin provides language support in IntelliJ IDEA and Android Stu
   <xi:include href="firInspections.xml" xpointer="xpointer(/idea-plugin/*)"/>
   <xi:include href="firIntentions.xml" xpointer="xpointer(/idea-plugin/*)"/>
   <xi:include href="fe10Binding.xml" xpointer="xpointer(/idea-plugin/*)"/>
-  <xi:include href="codeInsigts.xml" xpointer="xpointer(/idea-plugin/*)"/>
+  <xi:include href="codeInsights.xml" xpointer="xpointer(/idea-plugin/*)"/>
   <xi:include href="analysisApiProviders.xml" xpointer="xpointer(/idea-plugin/*)"/>
   <xi:include href="analysisProjectStructure.xml" xpointer="xpointer(/idea-plugin/*)"/>
   <xi:include href="lowLevelApiFir.xml" xpointer="xpointer(/idea-plugin/*)"/>
