IDEA-289267 Change highlight to highlight unused code

--- a/plugins/InspectionGadgets/InspectionGadgetsAnalysis/resources/messages/InspectionGadgetsBundle.properties
+++ b/plugins/InspectionGadgets/InspectionGadgetsAnalysis/resources/messages/InspectionGadgetsBundle.properties
@@ -968,9 +968,9 @@ unnecessary.qualifier.for.super.problem.descriptor=Qualifier <code>#ref</code> o
 unused.label.problem.descriptor=Unused label <code>#ref</code> #loc
 redundant.field.initialization.problem.descriptor=Field initialization to <code>#ref</code> is redundant #loc
 redundant.implements.problem.descriptor=Redundant interface declaration <code>#ref</code> #loc
-extends.object.problem.descriptor=Class <code>#ref</code> explicitly extends 'java.lang.Object' #loc
-type.parameter.extends.object.problem.descriptor1=Type parameter <code>#ref</code> explicitly extends 'java.lang.Object' #loc
-type.parameter.extends.object.problem.descriptor2=Wildcard type argument <code>#ref</code> explicitly extends 'java.lang.Object' #loc
+extends.object.problem.descriptor=Class <code>{0}</code> explicitly extends ''java.lang.Object'' #loc
+type.parameter.extends.object.problem.descriptor1=Type parameter <code>{0}</code> explicitly extends ''java.lang.Object'' #loc
+type.parameter.extends.object.problem.descriptor2=Wildcard type argument <code>{0}</code> explicitly extends ''java.lang.Object'' #loc
 unnecessary.super.constructor.problem.descriptor=<code>#ref</code> is unnecessary #loc
 unnecessary.constructor.problem.descriptor=No-arg constructor <code>#ref()</code> is redundant #loc
 unnecessary.constructor.annotation.option=Ignore constructors with an annotation
@@ -980,7 +980,7 @@ unnecessary.default.expressions.option=Only report switch expressions
 unnecessary.default.quickfix=Remove 'default' branch
 unnecessary.boxing.problem.descriptor=Unnecessary boxing #loc
 unnecessary.boxing.inside.value.of.problem.descriptor=Redundant boxing, <code>{0}.{1}()</code> call can be used instead #loc
-unnecessary.unboxing.problem.descriptor=Unnecessary unboxing #loc
+unnecessary.unboxing.problem.descriptor=Unnecessary unboxing <code>{0}</code> #loc
 unnecessary.boxing.superfluous.option=Only report truly superfluously boxed expressions
 unnecessary.unboxing.superfluous.option=Only report truly superfluously unboxed expressions
 for.can.be.foreach.problem.descriptor=<code>#ref</code> loop can be replaced with enhanced 'for' #loc
@@ -1794,7 +1794,7 @@ string.concatenation.in.format.call.quickfix=Replace concatenation with separate
 string.concatenation.in.message.format.call.display.name=String concatenation as argument to 'MessageFormat.format()' call
 string.concatenation.in.message.format.call.problem.descriptor=String concatenation as argument to 'MessageFormat.format()' call #loc
 boxing.boxed.value.display.name=Boxing of already boxed value
-boxing.boxed.value.problem.descriptor=Boxing of already boxed <code>#ref</code> #loc
+boxing.boxed.value.problem.descriptor=Boxing of already boxed <code>{0}</code> #loc
 boxing.boxed.value.quickfix=Remove unnecessary boxing
 unnecessary.javadoc.link.option=Ignore inline links to super methods
 constant.junit.assert.argument.display.name=Constant assert argument
