--- a/plugins/gradle/tooling-extension-impl/src/org/jetbrains/plugins/gradle/tooling/internal/init/JetGradlePlugin.gradle
+++ b/plugins/gradle/tooling-extension-impl/src/org/jetbrains/plugins/gradle/tooling/internal/init/JetGradlePlugin.gradle
@@ -48,12 +48,13 @@ class JetGradlePlugin implements Plugin<Gradle> {
       rootGradle = rootGradle.parent
     }
     ToolingModelBuilderRegistry rootRegistry = (rootGradle as GradleInternal).services.get(ToolingModelBuilderRegistry)
-    jetModelBuilder = findJetModelBuilder(rootRegistry)
+    jetModelBuilder = rootGradle.extensions.findByName("jetModelBuilder")
     if(jetModelBuilder == null) {
       jetModelBuilder = GradleVersion.current() >= GradleVersion.version("4.4")
         ? (ToolingModelBuilder) ExtraModelBuilder.class.classLoader.loadClass(ExtraModelBuilder.class.typeName + "\$ForGradle44").newInstance()
         : new ExtraModelBuilder();
       rootRegistry.register(jetModelBuilder)
+      rootGradle.extensions.add("jetModelBuilder", jetModelBuilder)
     }
     if (registry != rootRegistry) {
       registry.register(jetModelBuilder)
