Add Intention to prefill named mandatory parameters in calls
^KTIJ-16676 Fixed

--- a/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
@@ -2449,6 +2449,7 @@ kotlin.language.configurable=Kotlin
 kotlin.scripting.configurable=Kotlin Scripting
 hint.text.no.expression.found=No expression found
 progress.title.calculating.type=Calculating type\u2026
+intention.prefill.named.mandatory.parameters=Prefill named mandatory parameters
 intention.name.use.correct.parameter.name=Use correct parameter name
 intention.add.import.alias.group.name=Add Import Alias
 inspection.message.inconsistent.parameter.name.for.0=Inconsistent parameter name for ''{0}''
