--- a/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
@@ -1479,6 +1479,7 @@ remove.redundant.constructor.keyword.fix.text=Remove redundant 'constructor' key
 redundant.constructor.keyword=Redundant 'constructor' keyword
 remove.redundant.if.text=Remove redundant 'if' statement
 redundant.if.statement=Redundant 'if' statement
+redundant.if.option.ignore.chained=Ignore chained 'if' statements
 redundant.if.statement.analyzing.type=Analyzing condition type...
 convert.to.concatenated.string.statement.analyzing.entry.type=Analyzing entry type...
 delete.fix.family.name=Remove arrow
