--- a/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
@@ -2450,6 +2450,7 @@ kotlin.scripting.configurable=Kotlin Scripting
 hint.text.no.expression.found=No expression found
 progress.title.calculating.type=Calculating type\u2026
 intention.prefill.named.mandatory.parameters=Prefill named mandatory parameters
+intention.prefill.named.optional.parameters=Prefill named optional parameters
 intention.name.use.correct.parameter.name=Use correct parameter name
 intention.add.import.alias.group.name=Add Import Alias
 inspection.message.inconsistent.parameter.name.for.0=Inconsistent parameter name for ''{0}''
