--- a/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
@@ -2449,8 +2449,8 @@ kotlin.language.configurable=Kotlin
 kotlin.scripting.configurable=Kotlin Scripting
 hint.text.no.expression.found=No expression found
 progress.title.calculating.type=Calculating type\u2026
-intention.prefill.named.mandatory.parameters=Prefill named mandatory parameters
-intention.prefill.named.optional.parameters=Prefill named optional parameters
+intention.fill.in.mandatory.arguments=Fill in mandatory arguments
+intention.fill.in.optional.arguments=Fill in optional arguments
 intention.name.use.correct.parameter.name=Use correct parameter name
 intention.add.import.alias.group.name=Add Import Alias
 inspection.message.inconsistent.parameter.name.for.0=Inconsistent parameter name for ''{0}''
