[kotlin] "Redundant 'if' statement": don't highlight with floating-point types
^KTIJ-25820 Fixed

--- a/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
@@ -1478,6 +1478,7 @@ redundant.getter=Redundant getter
 remove.redundant.constructor.keyword.fix.text=Remove redundant 'constructor' keyword
 redundant.constructor.keyword=Redundant 'constructor' keyword
 remove.redundant.if.text=Remove redundant 'if' statement
+remove.redundant.if.may.change.semantics.with.floating.point.types=Remove redundant 'if' statement (may change semantics with floating-point types)
 redundant.if.statement=Redundant 'if' statement
 redundant.if.option.ignore.chained=Ignore chained 'if' statements
 redundant.if.statement.analyzing.type=Analyzing condition type...
