--- a/plugins/kotlin/code-insight/impl-base/resources/messages/KotlinCodeInsightBundle.properties
+++ b/plugins/kotlin/code-insight/impl-base/resources/messages/KotlinCodeInsightBundle.properties
@@ -2,3 +2,4 @@ class.initializer=<class initializer>
 object.0=object{0}
 show.non.public=Non-public
 show.properties=Properties
+inspection.message.never.used={0} is never used
