--- a/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
+++ b/plugins/kotlin/base/resources/resources-en/messages/KotlinBundle.properties
@@ -2177,6 +2177,7 @@ inspection.constant.condition.if.display.name=Condition of 'if' expression is co
 inspection.null.checks.to.safe.call.display.name=Null-checks can be replaced with safe-calls
 inspection.cascade.if.display.name=Cascade if can be replaced with when
 inspection.lift.return.or.assignment.display.name=Return or assignment can be lifted out
+inspection.lift.return.or.assignment.option.only.single.statement=Report only if each branch is a single statement
 inspection.use.expression.body.display.name=Expression body syntax is preferable here
 inspection.simplifiable.call.chain.display.name=Call chain on collection type can be simplified
 inspection.useless.call.on.collection.display.name=Useless call on collection type
