--- a/java/java-analysis-impl/resources/messages/InspectionGadgetsBundle.properties
+++ b/java/java-analysis-impl/resources/messages/InspectionGadgetsBundle.properties
@@ -139,7 +139,7 @@ primitive.array.argument.to.var.arg.method.problem.descriptor=Confusing primitiv
 object.comparison.display.name=Object comparison using '==', instead of 'equals()'
 object.comparison.enumerated.ignore.option=Ignore '==' between enum variables
 object.comparison.klass.ignore.option=Ignore '==' between final class types without 'equals()' implementation
-object.comparison.problem.description=Object values are compared using <code>#ref</code>, not 'equals()' #loc
+object.comparison.problem.description=Object values are compared using 'equals()', not <code>#ref</code> #loc
 equality.to.safe.equals.quickfix=Replace '==' with null-safe 'equals()'
 inequality.to.safe.not.equals.quickfix=Replace '!=' with null-safe '!equals()'
 default.tostring.call.display.name=Call to default 'toString()'
@@ -167,7 +167,7 @@ static.field.via.subclass.problem.descriptor=Static field <code>#ref</code> decl
 static.field.via.subclass.rationalize.quickfix=Rationalize static field access
 string.comparison.display.name=String comparison using '==', instead of 'equals()'
 number.comparison.display.name=Number comparison using '==', instead of 'equals()'
-string.comparison.problem.descriptor=String values are compared using <code>#ref</code>, not 'equals()' #loc
+string.comparison.problem.descriptor=String values are compared using 'equals()', not <code>#ref</code> #loc
 number.comparison.problem.descriptor=Number objects are compared using <code>#ref</code>, not 'equals()' #loc
 subtraction.in.compareto.display.name=Subtraction in 'compareTo()'
 subtraction.in.compareto.problem.descriptor=Subtraction <code>#ref</code> in 'compareTo()' may result in overflow or precision loss #loc
@@ -1808,7 +1808,7 @@ try.finally.can.be.try.with.resources.display.name='try finally' can be replaced
 try.finally.can.be.try.with.resources.problem.descriptor=<code>#ref</code> can use automatic resource management #loc
 try.finally.can.be.try.with.resources.quickfix=Replace with 'try' with resources
 array.comparison.display.name=Array comparison using '==', instead of 'Arrays.equals()'
-array.comparison.problem.descriptor=Array objects are compared using <code>#ref</code>, not 'Arrays.equals()' #loc
+array.comparison.problem.descriptor=Array objects are compared using 'Arrays.equals()', not <code>#ref</code> #loc
 array.hash.code.display.name='hashCode()' called on array
 array.hash.code.problem.descriptor=<code>#ref()</code> called on array should probably be 'Arrays.hashCode()' #loc
 objects.hash.problem.descriptor=Array passed to 'Objects.hash()' should be wrapped in 'Arrays.hashcode()'
