[JEWEL-741] Use TextMate as Fallback for Languages Without Parsers
Added necessary code logic to actually use the language identifier from
a code block and use that to find a plugin that can add semantic
highlighting or token-based if no plugin is found by delegating to
TextMate

move fromMimeTypeString to DefaultMarkdownBlockRenderer add suppress to MarkdownProcessor

Fix coroutines error + trying to add textmate plugin

turn java test to html

add Markdown tab to JewelDemoToolWindowFactory

--- a/platform/jewel/gradle/libs.versions.toml
+++ b/platform/jewel/gradle/libs.versions.toml
@@ -16,10 +16,11 @@ junitPlatform = "1.13.4"
 kotlin = "2.2.20"
 kotlinpoet = "2.1.0"
 kotlinterGradlePlugin = "5.2.0"
-kotlinxSerialization = "1.8.1"
+kotlinxSerialization = "1.9.0"
 ktfmtGradlePlugin = "0.23.0"
 metalava = "1.0.0-alpha13"
 jsoup = "1.21.2"
+mockk = "1.14.5"
 
 [libraries]
 assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertJ"}
@@ -43,9 +44,11 @@ junit-platform-engine = { module = "org.junit.platform:junit-platform-engine", v
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher", version.ref = "junitPlatform" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
+kotlinx-serialization-core = { module = "org.jetbrains.kotlinx:kotlinx-serialization-core-jvm", version.ref = "kotlinxSerialization" }
 ktor-client-java = { module = "io.ktor:ktor-client-java", version = "3.0.3" }
 metalava = { module = "com.android.tools.metalava:metalava", version.ref = "metalava" }
 jsoup = { module = "org.jsoup:jsoup", version.ref = "jsoup" }
+mockk = { module = "io.mockk:mockk", version.ref = "mockk" }
 
 # Plugin libraries for build-logic's convention plugins to use to resolve the types/tasks coming from these plugins
 detekt-gradlePlugin = { module = "io.gitlab.arturbosch.detekt:detekt-gradle-plugin", version.ref = "detekt" }
