[JEWEL-61] LazyTable Component
- Add LazyTable component for large datasets
- Create OverflowBox utility for smart cell content overflow on hover
- Provide themed TableViewCell and TableViewHeader components with IntelliJ theme integration
- Added theme classes based on IJ table

Co-authored-by: James Rose <rosej@google.com>

--- a/platform/jewel/gradle/libs.versions.toml
+++ b/platform/jewel/gradle/libs.versions.toml
@@ -1,4 +1,5 @@
 [versions]
+androidxCollection = "1.5.0"
 assertJ = "3.26.3"
 coil = "3.2.0"
 commonmark = "0.24.0"
@@ -22,6 +23,7 @@ metalava = "1.0.0-alpha13"
 jsoup = "1.21.2"
 
 [libraries]
+androidx-collection = { module = "androidx.collection:collection", version.ref = "androidxCollection" }
 assertj-core = { module = "org.assertj:assertj-core", version.ref = "assertJ"}
 coil-compose = { module = "io.coil-kt.coil3:coil-compose", version.ref = "coil" }
 coil-network-ktor3 = { module = "io.coil-kt.coil3:coil-network-ktor3", version.ref = "coil" }
